2003-04-17  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.scm (equal?): Provide default method for `equal?'.
	(compute-getters-n-setters): Check for bad init-thunks.

2003-04-15  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.scm (compute-getter-method): For custom getter: Check
	boundness even if there is an init-thunk.  (The getter can return
	#<unbound> even if the slot has been set before.)

2003-04-13  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.scm (compute-getters-n-setters/verify-accessors): Better
	check of format of value returned by compute-get-n-set.
	(compute-getters-n-setters): Extended format of slot
	getters-n-setters to indicate position and size of slot memory
	allocated in instances.

2002-12-08  Rob Browning  <rlb@defaultvalue.org>

	* Makefile.am (subpkgdatadir): VERSION -> GUILE_EFFECTIVE_VERSION.

	* goops/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

2002-02-08  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am, goops/Makefile.am (AUTOMAKE_OPTIONS):
	Replace "foreign" with "gnu".

2001-10-18  Mikael Djurfeldt  <mdj@linnaeus>

	* goops.scm, goops/active-slot.scm, goops/compile.scm,
	goops/composite-slot.scm, goops/describe.scm, goops/dispatch.scm,
	goops/old-define-method.scm, goops/save.scm, goops/util.scm: Move
	module the system directives `export', `export-syntax',
	`re-export' and `re-export-syntax' into the `define-module' form.
	This is the recommended way of exporting bindings.

2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* goops/util.scm: Updated copyright notice.

2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* goops/save.scm: Use `re-export' instead of `export' when
	re-exporting `make-unbound'.

2001-06-05  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops.scm: Use `re-export' instead of `export' when re-exporting
	`class-of'.

2001-05-19  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops.scm: Call `%init-goops-builtins' instead of using the